--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,3 +1,5 @@
+$pink: #c9346e;
+
 #main-wrapper {
   height: 100%;
 
@@ -140,5 +142,21 @@ form {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+  }
+}
+
+.my-details__form {
+  .form__header {
+    margin-bottom: 10px;
+  }
+  .form__body {
+    margin-bottom: 15px;
+  }
+  .form-btn {
+    .ant-btn-primary {
+      background-color: $pink !important;
+      border-color: $pink !important;
+    }
+    width: 20%;
   }
 }
