--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,7 @@
 $pink: #c9346e;
+$blue: #108ee9;
+$gray: #ececec;
+$red: #cf0000;
 
 #main-wrapper {
   height: 100%;
@@ -15,7 +18,7 @@ $pink: #c9346e;
   cursor: pointer;
   transition: color .3s;
   &:hover {
-    color: #108ee9;
+    color: $blue;
   }
 }
 
@@ -52,100 +55,21 @@ $pink: #c9346e;
   display: none;
 }
 
-.ant-badge {
-  margin-top: 30px;
-  .ant-badge-dot {
-    cursor: pointer;
-    width: 15px;
-    height: 15px;
-  }
-}
-
-.ant-card {
-  margin-top: 10px;
-}
-
-.ant-select-show-search.ant-select-auto-complete.ant-select.ant-select-combobox.ant-select-enabled.ant-select-allow-clear {
-  position: fixed;
-  top: 17px;
-  margin-left: 50px;
-  width: 50%;
-  outline: none;
-  font-size: 16px;
-  & input {
-    font-size: 16px;
-    border: none;
-    box-shadow: none;
-  }
-}
-
-.community_data {
-  border-top: 1px solid #ececec;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  &:first-child,
-  &:nth-child(2) {
-    border-top: none;
-    padding-top: 0;
-    padding-bottom: 10px;
-    .community_data-list {
-      padding-top: 10px;
-    }
-  }
-  .community_data-header {
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  .community_data-list {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    .ant-badge {
-      background: #e8e8e8;
-      padding: 10px;
-      border-radius: 10px;
-      width: 140px;
-      margin-right: 10px;
-      sup {
-        background-color: #588bff;
-      }
-      & > div {
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-    }
-  }
-}
-
-form {
+.my-details,
+.add-photos {
   width: 50%;
   margin: auto;
 
-  .field_block {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    .field_block-variety {
-      display: flex;
-      flex-direction: column;
-      width: 80%;
-    }
+  h1 {
+    margin-bottom: 15px;
   }
-
-  .buttons_block {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+  hr {
+    margin-bottom: 30px;
   }
 }
 
-.my-details__form {
+.my-details__form,
+.add-photos__form {
   .form__header {
     margin-bottom: 10px;
   }
@@ -153,10 +77,32 @@ form {
     margin-bottom: 15px;
   }
   .form-btn {
-    .ant-btn-primary {
-      background-color: $pink !important;
-      border-color: $pink !important;
-    }
     width: 20%;
+  }
+}
+
+.add-photos__form {
+  .form__body {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    .delete-photo {
+      cursor: pointer;
+      color: $red;
+      &:hover {
+        font-weight: 500;
+      }
+    }
+    .plus {
+      font-size: 50px;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-bottom: 15px;
+    }
   }
 }
