--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -9,6 +9,20 @@ $red: #cf0000;
   & > div {
     height: 100%;
   }
+
+  .ant-layout {
+    .ant-layout-footer {
+      text-align: center;
+      position: fixed;
+      bottom: 0;
+      width: calc(100% - 200px);
+      background-color: $gray;
+    }
+    .ant-layout-content {
+      padding-bottom: 100px !important;
+      min-height: auto !important;
+    }
+  }
 }
 
 .ant-layout-header .trigger {
@@ -56,20 +70,20 @@ $red: #cf0000;
 }
 
 .my-details,
-.add-photos {
+.add-photos,
+.plans {
   width: 50%;
   margin: auto;
 
-  h1 {
-    margin-bottom: 15px;
-  }
   hr {
     margin-bottom: 30px;
+    margin-top: 30px;
   }
 }
 
 .my-details__form,
-.add-photos__form {
+.add-photos__form,
+.plans__form {
   .form__header {
     margin-bottom: 10px;
   }
@@ -103,6 +117,45 @@ $red: #cf0000;
       justify-content: center;
       align-items: center;
       padding-bottom: 15px;
+    }
+  }
+}
+
+.plans__form {
+  .fields-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    .field-block {
+      width: 48%;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 10px;
+      span {
+        font-size: 12pt;
+        font-weight: 500;
+      }
+    }
+  }
+  .delete-plan {
+    cursor: pointer;
+    color: $red;
+    text-align: center;
+    width: 100%;
+    &:hover {
+      font-weight: 500;
+    }
+  }
+}
+
+.plans {
+  .add-plan-btn {
+    cursor: pointer;
+    color: $blue;
+    text-align: center;
+    width: 100%;
+    &:hover {
+      font-weight: 500;
     }
   }
 }
